# Q3T_Sol_Allen_Saji

./: readme.md
Prerequisite-Task/: claim-airdrop.ts  convert.ts  empty-wallet.ts  enroll.ts  keygen.ts  package-lock.json  package.json  readme.md  transfer.ts  tsconfig.json  verify.ts
Prerequisite-Task/programs/: wba_prereq.ts
Registration-Task/: Cargo.toml  readme.md
Registration-Task/src/: lib.rs
Registration-Task/src/programs/: wba_prereq.rs
Week-1-NFT-Typescript/cluster1/: nft_image.ts  nft_metadata.ts  nft_mint.ts  spl_init.ts  spl_metadata.ts  spl_mint.ts  spl_transfer.ts  vault_init.ts
anchor-marketplace/programs/anchor-marketplace/: Cargo.toml
anchor_vault_q3_2024/: Anchor.toml
anchor_vault_q3_2024/programs/anchor_vault_q3_2024/src/: lib.rs
nf-tickets/: Anchor.toml  package-lock.json  package.json
nf-tickets/programs/nf-tickets/: Cargo.toml
nf-tickets/programs/nf-tickets/src/: errors.rs  lib.rs
nf-tickets/programs/nf-tickets/src/contexts/: create_event.rs  create_ticket.rs  initialize.rs  manager_setup.rs  mod.rs  scan_ticket.rs
nf-tickets/programs/nf-tickets/src/instructions/: create_event.rs  create_ticket.rs  manager_setup.rs  mod.rs  scan_ticket.rs  withdraw_funds.rs
nf-tickets/programs/nf-tickets/src/state/: event.rs  platform.rs
nf-tickets/programs/nf-tickets/src/states/: mod.rs
nf-tickets/tests/: nf-tickets.ts
vote-program/: Anchor.toml
vote-program/programs/vote-program/src/: lib.rs
week2-escrow/: Anchor.toml
week2-escrow/programs/week2-escrow/: Cargo.toml
week2-escrow/tests/: week2-escrow.ts
(+1 files in other folders)
